# mu-chess

./: .gitignore  Cargo.toml  IMPLEMENTATION_PROMPT.md  SPEC.md  config.toml
crates/chess/: Cargo.toml
crates/chess/src/: attacks.rs  bitboard.rs  game_impl.rs  lib.rs  movegen.rs  moves.rs  observation.rs  piece.rs  position.rs  square.rs
crates/chess/tests/: perft.rs  properties.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  game.rs  lib.rs  types.rs
crates/mcts/: Cargo.toml
crates/mcts/src/: config.rs  evaluator.rs  lib.rs  node.rs  search.rs  tree.rs
crates/mcts/src/games/: mod.rs  tictactoe.rs
crates/mcts/tests/: mcts_properties.rs  tictactoe_perfect.rs
crates/muzero/: Cargo.toml
crates/muzero/src/: evaluator.rs  inference.rs  lib.rs
crates/selfplay/: Cargo.toml
crates/selfplay/src/: main.rs  minimax.rs
scripts/: train_loop.sh
training/: pyproject.toml  train.py
training/src/muzero/: __init__.py  cli.py  config.py  export.py  networks.py  replay.py  trainer.py  utils.py
training/tests/: __init__.py  test_networks.py
