[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/chess",
    "crates/mcts",
    "crates/muzero",
    "crates/selfplay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
