[project]
name = "muzero-training"
version = "0.1.0"
description = "MuZero training pipeline for chess"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "msgpack>=1.0",
    "tomli>=2.0",
    "tqdm>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "tensorboard>=2.0",
    "onnxruntime>=1.16",
]

[project.scripts]
muzero-train = "muzero.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muzero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
