[package]
name = "muzero-selfplay"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
muzero-chess = { version = "0.1.0", path = "../chess" }
muzero-core = { version = "0.1.0", path = "../core" }
muzero-inference = { version = "0.1.0", path = "../muzero" }
muzero-mcts = { version = "0.1.0", path = "../mcts" }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.11.0"
rmp-serde = "1.3.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.148"
